# holding_contracts_solana_hackathon

./: AGENTS.md  Anchor.toml  METADATA.md  ONCHAIN_METADATA.md  RTM.md  package-lock.json  package.json
app/: package.json  vite.config.cjs
app/src/: App.css  App.tsx  index.css  main.tsx
app/src/components/: PropertyCard.tsx  TokenList.css  TokenList.tsx
app/src/data/: properties.json
app/src/hooks/: usePropertyProgram.ts  usePropertyShares.ts
app/src/idl/: property_shares.json  property_shares_type.ts
app/src/lib/: addresses.ts  constants.ts
config/: properties.json
config/metadata/: villa-alpha.json
migrations/: deploy.js
programs/meme_token/: Cargo.toml
programs/meme_token/src/: lib.rs
programs/property_shares/: Cargo.toml
programs/property_shares/src/: contexts.rs  lib.rs
programs/property_shares/src/contract/: constants.rs  errors.rs  mod.rs  state.rs
scripts/: add-metadata.ts  create-token-with-metadata.ts  init-properties.js  init-properties.ts  mint.ts  read-metadata.ts  set-metadata.ts
tests/: meme_token.js  meme_token.ts
