# CHANGE: Rename crate to describe property-share architecture instead of legacy meme token.
# WHY: Aligns package identity with business domain per user request.
# QUOTE(TZ): "Can we rename the project... and implement at least some architecture"
# REF: USER-RENAME
# SOURCE: n/a
# CHANGE: Translate repository comments to English per localization requirement.
# WHY: Ensures build metadata remains understandable without Russian text, keeping tooling instructions consistent.
# QUOTE(TZ): "Replace all Russian with English"
# REF: USER-TRANSLATE
# SOURCE: n/a
[package]
name = "property_shares"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "property_shares"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []


[dependencies]
anchor-lang = { version = "0.32.1", features = ["init-if-needed"] }
anchor-spl  = { version = "0.32.1", features = ["metadata"] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
